force-app/core/objects/Contact/fields/AverageHoursBetweenDiaperChanges__c.field-meta.xml
<CustomField>
    <fullName>AverageHoursBetweenDiaperChanges__c</fullName>
    <formula>((TimeOfLastDiaperChange__c - TimeOfFirstDiaperChange__c) /  NumberOfDiaperChanges__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg # of Hours Between Diaper Changes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>