force-app/core/objects/Contact/fields/AverageHoursBetweenFeedings__c.field-meta.xml
<CustomField>
    <fullName>AverageHoursBetweenFeedings__c</fullName>
    <formula>((TimeOfLastFeeding__c - TimeOfFirstFeeding__c) /  NumberOfFeedings__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg # of Hours Between Feedings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>