force-app/core/objects/Contact/fields/BirthWeight__c.field-meta.xml
<CustomField>
    <fullName>BirthWeight__c</fullName>
    <inlineHelpText>Birth Weight in Grams</inlineHelpText>
    <label>Birth Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>