force-app/core/objects/Contact/fields/ExpectedTimeOfNextDiaperChange__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTimeOfNextDiaperChange__c</fullName>
    <formula>TimeOfLastDiaperChange__c + (AverageHoursBetweenDiaperChanges__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Time of Next Diaper Change</label>
    <type>DateTime</type>
</CustomField>