force-app/core/objects/Contact/fields/ExpectedTimeOfNextFeeding__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTimeOfNextFeeding__c</fullName>
    <formula>TimeOfLastFeeding__c + (AverageTimeInHoursBetweenFeedings__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Time of Next Feeding</label>
    <type>DateTime</type>
</CustomField>