force-app/core/objects/Contact/fields/HoursSinceLastDiaperChange__c.field-meta.xml
<CustomField>
    <fullName>HoursSinceLastDiaperChange__c</fullName>
    <formula>(NOW() - TimeOfLastDiaperChange__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Last Diaper Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>