force-app/core/objects/Contact/fields/HoursSinceLastFeeding__c.field-meta.xml
<CustomField>
    <fullName>HoursSinceLastFeeding__c</fullName>
    <formula>(NOW() - TimeOfLastFeeding__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Last Feeding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>