force-app/core/objects/Contact/fields/NumberOfDiaperChanges__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDiaperChanges__c</fullName>
    <label>Number of Diaper Changes</label>
    <summaryForeignKey>DiaperChange__c.Baby__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>