force-app/core/objects/Contact/fields/NumberOfFeedings__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFeedings__c</fullName>
    <label>Number of Feedings</label>
    <summaryForeignKey>Feeding__c.Baby__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>