force-app/core/objects/Contact/fields/TimeOfFirstDiaperChange__c.field-meta.xml
<CustomField>
    <fullName>TimeOfFirstDiaperChange__c</fullName>
    <label>Time of First Diaper Change</label>
    <summarizedField>DiaperChange__c.Occurred__c</summarizedField>
    <summaryForeignKey>DiaperChange__c.Baby__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>