force-app/core/objects/Contact/fields/TimeOfFirstFeeding__c.field-meta.xml
<CustomField>
    <fullName>TimeOfFirstFeeding__c</fullName>
    <label>Time of First Feeding</label>
    <summarizedField>Feeding__c.Occurred__c</summarizedField>
    <summaryForeignKey>Feeding__c.Baby__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>