force-app/core/objects/Contact/fields/TimeOfLastDiaperChange__c.field-meta.xml
<CustomField>
    <fullName>TimeOfLastDiaperChange__c</fullName>
    <label>Time of Last Diaper Change</label>
    <summarizedField>DiaperChange__c.Occurred__c</summarizedField>
    <summaryForeignKey>DiaperChange__c.Baby__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>