force-app/core/objects/Contact/fields/TimeOfLastFeeding__c.field-meta.xml
<CustomField>
    <fullName>TimeOfLastFeeding__c</fullName>
    <label>Time of Last Feeding</label>
    <summarizedField>Feeding__c.Occurred__c</summarizedField>
    <summaryForeignKey>Feeding__c.Baby__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>